Rudimentary form in. Doesn't save anywhere yet.

--- a/inployment/inployment_app/templates/home.html
+++ b/inployment/inployment_app/templates/home.html
@@ -5,6 +5,12 @@
     <title>Inployment temp landing page</title>
 </head>
 <body>
-    <h1>WIGGLE WIGGLE PORPY PIGGLE</h1>
+    <h1>INPLOYMENT</h1>
+    <h2>We put <strike>the</strike> an 'In' in 'Employment'</h2>
+    <p>Want to find out more?</p>
+    <form method="POST">
+        <input id="curious-email" placeholder="Your email address"/>
+    </form>
+
 </body>
 </html>
