CSS now in static file, not inline

--- a/inployment/inployment_app/templates/home.html
+++ b/inployment/inployment_app/templates/home.html
@@ -8,10 +8,12 @@
 
     <!-- Get bootstrap css -->
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}" media="screen">
+    <link rel="stylesheet" type="text/css" href="{% static 'inployment_app/css/main.css' %}" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
 </head>
-<body style="background-color: #2b669a">
-    <div id="main-form" style="padding:30px;margin:50px auto;width:300px;text-align:center;font-family: 'Open Sans', sans-serif;background-color: #ffffff">
+<body>
+    <div id="main-form">
         <h1>INPLOYMENT</h1>
         <h3>We put <strike>the</strike> an 'In' in 'Employment'</h3>
         <p>Want to find out more?</p>
