--- a/inployment/inployment_app/templates/base.html
+++ b/inployment/inployment_app/templates/base.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.min.css' %}" media="screen">
     <link rel="stylesheet" type="text/css" href="{% static 'inployment_app/css/main.css' %}" media="screen">
 
+    <!-- JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
