--- a/inployment/inployment_app/templates/base.html
+++ b/inployment/inployment_app/templates/base.html
@@ -16,6 +16,7 @@
 
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:300,400|PT+Serif' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
