Font change and tidy

--- a/inployment/static/inployment_app/css/main.css
+++ b/inployment/static/inployment_app/css/main.css
@@ -1,11 +1,10 @@
 
 body {
-    /*font-family: 'PT Serif',serif;*/
     font-family: 'Open Sans', sans-serif
 }
 
 h1,h2{
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h1{
