--- a/inployment/inployment_app/templates/base.html
+++ b/inployment/inployment_app/templates/base.html
@@ -15,8 +15,7 @@
 
 
     <!-- Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Oswald:300,400|PT+Serif' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
