Styling on thank you page

--- a/inployment-django/inployment/inployment_app/templates/thanks.html
+++ b/inployment-django/inployment/inployment_app/templates/thanks.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div id="#thanks-box" class="container">
+    <div id="thanks-box" class="container">
         <h1>Thank you</h1>
         <p>Thanks for signing up! We'll be in touch soon.</p>
     </div>
