--- a/inployment-django/inployment/static/inployment_app/css/main.css
+++ b/inployment-django/inployment/static/inployment_app/css/main.css
@@ -19,7 +19,7 @@ h1{
 /* Title section */
 
 #title-container{
-    margin-bottom:60px;
+    margin-bottom:40px;
 }
 
 
@@ -61,8 +61,16 @@ h1{
     color: #ffffff;
 }
 
+/* Thank you */
+#thanks-box {
+    color: #fff;
+    background-color: #095a09;
+    padding: 45px 0;
+}
+
 /* Forms */
 button {
     width: 100%;
     margin-top: 1em;
 }
+
