--- a/inployment-django/inployment/inployment_app/templates/home.html
+++ b/inployment-django/inployment/inployment_app/templates/home.html
@@ -13,9 +13,13 @@
                     <h2 class="user-title">Business</h2>
                     <p class="user-title-post">with a paid internship to offer</p>
                     <p class="blurb">blah blah blah yeah yeah jobs blah yes.</p>
-                    <form method="POST" class="form-group">
-                        <input class="form-control" name="business_name" id="business-name" placeholder="Business name"/>
-                        <input class="form-control" name="business_email" id="business-email" placeholder="Email address"/>
+                    <form method="POST" role="form">
+                        <div class="form-group">
+                            <input class="form-control" name="business_name" id="business-name" placeholder="Business name"/>
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" name="business_email" id="business-email" placeholder="Email address"/>
+                        </div>
                         <button type="submit" class="btn btn-default" name="business">Submit</button>
                         {% csrf_token %}
                     </form>
@@ -27,7 +31,7 @@
                     <h2 class="user-title">Candidate</h2>
                     <p class="user-title-post">or I represent someone who is</p->
                     <p class="blurb">Blah blah bandidate blah</p>
-                    <form method="POST" class="form-group">
+                    <form method="POST" role="form">
                         <input class="form-control" name="candidate_email" id="candidate-email" placeholder="Email address"/>
                         <button type="submit" class="btn btn-default" name="candidate">Submit</button>
                         {% csrf_token %}
@@ -40,7 +44,7 @@
                     <h2 class="user-title">Interested</h2>
                     <p class="user-title-post">and want to know more</p>
                     <p class="blurb">Think you can help in another way, or interested to find out more about what we're doing? You can sign up here to be kept updated, or drop us a line.</p>
-                    <form method="POST" class="form-group">
+                    <form method="POST" role="form">
                         <input class="form-control" name="interested_email" id="interested-email" placeholder="Email address"/>
                         <button type="submit" class="btn btn-default" name="interested">Submit</button>
                         {% csrf_token %}
