--- a/inployment-django/inployment/inployment_app/templates/home.html
+++ b/inployment-django/inployment/inployment_app/templates/home.html
@@ -15,10 +15,8 @@
                     <p class="blurb">blah blah blah yeah yeah jobs blah yes.</p>
                     <form method="POST" role="form">
                         <div class="form-group">
-                            <input class="form-control" name="business_name" id="business-name" placeholder="Business name"/>
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" name="business_email" id="business-email" placeholder="Email address"/>
+                            {{ business_form }}
+                            <!--<input class="form-control" name="business_email" id="business-email" placeholder="Email address"/>-->
                         </div>
                         <button type="submit" class="btn btn-default" name="business">Submit</button>
                         {% csrf_token %}
