--- a/inployment-django/inployment/inployment_app/templates/home.html
+++ b/inployment-django/inployment/inployment_app/templates/home.html
@@ -16,7 +16,6 @@
                     <form method="POST" role="form">
                         <div class="form-group">
                             {{ business_form }}
-                            <!--<input class="form-control" name="business_email" id="business-email" placeholder="Email address"/>-->
                         </div>
                         <button type="submit" class="btn btn-default" name="business">Submit</button>
                         {% csrf_token %}
@@ -30,7 +29,9 @@
                     <p class="user-title-post">or I represent someone who is</p->
                     <p class="blurb">Blah blah bandidate blah</p>
                     <form method="POST" role="form">
-                        <input class="form-control" name="candidate_email" id="candidate-email" placeholder="Email address"/>
+                        <div class="form-group">
+                            {{ candidate_form }}
+                        </div>
                         <button type="submit" class="btn btn-default" name="candidate">Submit</button>
                         {% csrf_token %}
                     </form>
@@ -43,7 +44,9 @@
                     <p class="user-title-post">and want to know more</p>
                     <p class="blurb">Think you can help in another way, or interested to find out more about what we're doing? You can sign up here to be kept updated, or drop us a line.</p>
                     <form method="POST" role="form">
-                        <input class="form-control" name="interested_email" id="interested-email" placeholder="Email address"/>
+                        <div class="form-group">
+                            {{ interested_form }}
+                        </div>
                         <button type="submit" class="btn btn-default" name="interested">Submit</button>
                         {% csrf_token %}
                     </form>
