Divs nestling under the boxes, waiting to be revealed

--- a/inployment-django/inployment/inployment_app/templates/home.html
+++ b/inployment-django/inployment/inployment_app/templates/home.html
@@ -8,6 +8,10 @@
 
         <div class="row">
             <div class="col-sm-4 email-box" >
+                <div class="underbox" id="business-underbox">
+
+                </div>
+
                 <div class="colour-container" id="business-box">
                     <p class="user-title-pre">I am a</p>
                     <h2 class="user-title">Business</h2>
