All divs now have underboxes, jQuery hiding is working properly. We're good

--- a/inployment-django/inployment/inployment_app/templates/home.html
+++ b/inployment-django/inployment/inployment_app/templates/home.html
@@ -8,11 +8,9 @@
 
         <div class="row">
             <div class="col-sm-4 email-box" >
-                <div class="underbox" id="business-underbox">
-
-                </div>
-
+                <div class="underbox" id="business-underbox"></div>
                 <div class="colour-container" id="business-box">
+                    <br/><br/>
                     <p class="user-title-pre">I am a</p>
                     <h2 class="user-title">Business</h2>
                     <p class="user-title-post">with a paid internship to offer</p>
@@ -27,7 +25,9 @@
                 </div>
             </div>
             <div class="col-sm-4 email-box" >
+                <div class="underbox" id="candidate-underbox"></div>
                 <div class="colour-container" id="candidate-box">
+                    <br/><br/>
                     <p class="user-title-pre">I am a</p>
                     <h2 class="user-title">Candidate</h2>
                     <p class="user-title-post">or I represent someone who is</p->
@@ -42,7 +42,9 @@
                 </div>
             </div>
             <div class="col-sm-4 email-box" >
+                <div class="underbox" id="interested-underbox"></div>
                 <div class="colour-container" id="interested-box">
+                    <br/><br/>
                     <p class="user-title-pre">I am just</p>
                     <h2 class="user-title">Interested</h2>
                     <p class="user-title-post">and want to know more</p>
