--- a/inployment-django/inployment/inployment_app/templates/home.html
+++ b/inployment-django/inployment/inployment_app/templates/home.html
@@ -8,13 +8,7 @@
 
         <div class="row">
             <div class="col-sm-4 email-box" >
-                <div class="underbox" id="business-underbox"></div>
-                <div class="colour-container" id="business-box">
-                    <br/><br/>
-                    <p class="user-title-pre">I am a</p>
-                    <h2 class="user-title">Business</h2>
-                    <p class="user-title-post">with a paid internship to offer</p>
-                    <p class="blurb">blah blah blah yeah yeah jobs blah yes.</p>
+                <div class="underbox" id="business-underbox">
                     <form method="POST" role="form">
                         <div class="form-group">
                             {{ business_form }}
@@ -23,15 +17,17 @@
                         {% csrf_token %}
                     </form>
                 </div>
+                <div class="blinds">
+                    <div class="colour-container" id="business-box">
+                        <p class="user-title-pre">I am a</p>
+                        <h2 class="user-title">Business</h2>
+                        <p class="user-title-post">with a paid internship to offer</p>
+                        <p class="blurb">blah blah blah yeah yeah jobs blah yes.</p>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-4 email-box" >
-                <div class="underbox" id="candidate-underbox"></div>
-                <div class="colour-container" id="candidate-box">
-                    <br/><br/>
-                    <p class="user-title-pre">I am a</p>
-                    <h2 class="user-title">Candidate</h2>
-                    <p class="user-title-post">or I represent someone who is</p->
-                    <p class="blurb">Blah blah bandidate blah</p>
+                <div class="underbox" id="candidate-underbox">
                     <form method="POST" role="form">
                         <div class="form-group">
                             {{ candidate_form }}
@@ -40,15 +36,17 @@
                         {% csrf_token %}
                     </form>
                 </div>
+                <div class="blinds">
+                    <div class="colour-container" id="candidate-box">
+                        <p class="user-title-pre">I am a</p>
+                        <h2 class="user-title">Candidate</h2>
+                        <p class="user-title-post">or I represent someone who is</p->
+                        <p class="blurb">Blah blah bandidate blah</p>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-4 email-box" >
-                <div class="underbox" id="interested-underbox"></div>
-                <div class="colour-container" id="interested-box">
-                    <br/><br/>
-                    <p class="user-title-pre">I am just</p>
-                    <h2 class="user-title">Interested</h2>
-                    <p class="user-title-post">and want to know more</p>
-                    <p class="blurb">Think you can help in another way, or interested to find out more about what we're doing? You can sign up here to be kept updated, or drop us a line.</p>
+                <div class="underbox" id="interested-underbox">
                     <form method="POST" role="form">
                         <div class="form-group">
                             {{ interested_form }}
@@ -56,6 +54,14 @@
                         <button type="submit" class="btn btn-default" name="interested">Submit</button>
                         {% csrf_token %}
                     </form>
+                </div>
+                <div class="blinds">
+                    <div class="colour-container" id="interested-box">
+                        <p class="user-title-pre">I am just</p>
+                        <h2 class="user-title">Interested</h2>
+                        <p class="user-title-post">and want to know more</p>
+                        <p class="blurb">Think you can help in another way, or interested to find out more about what we're doing? You can sign up here to be kept updated, or drop us a line.</p>
+                    </div>
                 </div>
             </div>
         </div>
