--- a/inployment-django/inployment/static/inployment_app/css/main.css
+++ b/inployment-django/inployment/static/inployment_app/css/main.css
@@ -45,7 +45,11 @@ h1{
 }
 
 .blinds{
-    height: 100%
+    width: 100%;
+    height: 100%;
+    display: none;
+    z-index: 50;
+    position: absolute;
 }
 
 .colour-container{
@@ -72,10 +76,8 @@ h1{
 
 /* Underboxes */
 .underbox{
-    position: absolute;
     width: 100%;
     height: 100%;
-    z-index: -1;
     background-color: #3c3c3c;
     padding: 30px;
 }
