Made everything a little more sensible

--- a/inployment-django/inployment/inployment_app/templates/base.html
+++ b/inployment-django/inployment/inployment_app/templates/base.html
@@ -33,10 +33,10 @@
         {% endblock %}
 
         <h2>Who we are</h2>
-        <p>Cantor and ball are a bunch of right mavericks and that is for certain.</p>
+        <a href="http://www.cantorandball.com/">www.cantorandball.com</a>
 
         <h2>Contact us</h2>
-        <p>contact details, Twitter handle, telephone number go here</p>
+        <a href="mailto:hello@cantorandball.com?Subject=Hello">hello@cantorandball.com</a>
 
     </div>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
