--- a/inployment-django/inployment/inployment_app/templates/home.html
+++ b/inployment-django/inployment/inployment_app/templates/home.html
@@ -23,46 +23,46 @@
                     <p class="user-title-pre">I am a</p>
                     <h2 class="user-title">Business</h2>
                     <p class="user-title-post">with a paid internship to offer</p>
-                    <p class="blurb">blah blah blah yeah yeah jobs blah yes.</p>
+                    <p class="blurb"></p>
                 </div>
             </div>
             <div class="col-sm-4 email-box" >
                 <div class="blinds">
                     <div class="underbox" id="candidate-underbox">
-                                                                     <form method="POST" role="form">
-                                                                     <div class="form-group">
-                                                                     {{ candidate_form }}
-                                                                     </div>
-                                                                     <button type="submit" class="btn btn-default" name="candidate">Submit</button>
-                                                                     {% csrf_token %}
-                                                                     </form>
-                                                                     </div>
+                         <form method="POST" role="form">
+                         <div class="form-group">
+                         {{ candidate_form }}
+                         </div>
+                         <button type="submit" class="btn btn-default" name="candidate">Submit</button>
+                         {% csrf_token %}
+                         </form>
+                    </div>
                 </div>
                 <div class="colour-container" id="candidate-box">
-                        <p class="user-title-pre">I am a</p>
-                        <h2 class="user-title">Candidate</h2>
-                        <p class="user-title-post">or I represent someone who is</p->
-                        <p class="blurb">Blah blah bandidate blah</p>
-                    </div>
+                    <p class="user-title-pre">I am a</p>
+                    <h2 class="user-title">Candidate</h2>
+                    <p class="user-title-post">or I represent someone who is</p>
+                    <p class="blurb"></p>
+                </div>
             </div>
             <div class="col-sm-4 email-box" >
                 <div class="blinds">
                     <div class="underbox" id="interested-underbox">
-                                                                      <form method="POST" role="form">
-                                                                      <div class="form-group">
-                                                                      {{ interested_form }}
-                                                                      </div>
-                                                                      <button type="submit" class="btn btn-default" name="interested">Submit</button>
-                                                                      {% csrf_token %}
-                                                                      </form>
-                                                                      </div>
+                         <form method="POST" role="form">
+                         <div class="form-group">
+                         {{ interested_form }}
+                         </div>
+                         <button type="submit" class="btn btn-default" name="interested">Submit</button>
+                         {% csrf_token %}
+                         </form>
+                    </div>
                 </div>
                 <div class="colour-container" id="interested-box">
                         <p class="user-title-pre">I am just</p>
                         <h2 class="user-title">Interested</h2>
                         <p class="user-title-post">and want to know more</p>
                         <p class="blurb">Think you can help in another way, or interested to find out more about what we're doing? You can sign up here to be kept updated, or drop us a line.</p>
-                    </div>
+                </div>
             </div>
         </div>
 {% endblock %}
