--- a/inployment-django/inployment/inployment_app/templates/base.html
+++ b/inployment-django/inployment/inployment_app/templates/base.html
@@ -19,6 +19,10 @@
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans' rel='stylesheet' type='text/css'>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'inployment_app/img/favicon.ico' %}"/>
+
+
 </head>
 <body>
 
