Finished test for candidate input

--- a/inployment-django/inployment/inployment_app/templates/base.html
+++ b/inployment-django/inployment/inployment_app/templates/base.html
@@ -28,7 +28,9 @@
 
     <div id="main-container" class="container-fluid">
         <div id="title-container" class="container-fluid">
-            <h1>INPLOYMENT</h1>
+            <a href="/">
+                <h1>INPLOYMENT</h1>
+            </a>
             <p>We connect people who need work but can't find it to companies
                 who want to help but aren't sure how.</p>
         </div>
