Failing chevron test

--- a/inployment-django/inployment/static/inployment_app/css/main.css
+++ b/inployment-django/inployment/static/inployment_app/css/main.css
@@ -106,3 +106,10 @@ button {
     margin-top: 1em;
 }
 
+/* SVG styling */
+
+.arrow {
+    stroke: #FFF;
+    fill: #FFF;
+    stroke-width: 0px;
+}
