--- a/inployment-django/inployment/inployment_app/templates/home.html
+++ b/inployment-django/inployment/inployment_app/templates/home.html
@@ -24,6 +24,9 @@
                     <h2 class="user-title">Business</h2>
                     <p class="user-title-post">with a paid internship to offer</p>
                     <p class="blurb"></p>
+                    <svg width=32px height=17px viewBox="0 0 60 32">
+                        <path class="arrow" d="M0 4 L4 0 L30 24 L56 0 L60 4 L30 32 L0 4"></path>
+                    </svg>
                 </div>
             </div>
             <div class="col-sm-4 email-box" >
@@ -43,6 +46,9 @@
                     <h2 class="user-title">Candidate</h2>
                     <p class="user-title-post">or I represent someone who is</p>
                     <p class="blurb"></p>
+                    <svg width=32px height=17px viewBox="0 0 60 32">
+                        <path class="arrow" d="M0 4 L4 0 L30 24 L56 0 L60 4 L30 32 L0 4"></path>
+                    </svg>
                 </div>
             </div>
             <div class="col-sm-4 email-box" >
@@ -62,6 +68,9 @@
                         <h2 class="user-title">Interested</h2>
                         <p class="user-title-post">and want to know more</p>
                         <p class="blurb">Think you can help in another way, or interested to find out more about what we're doing? You can sign up here to be kept updated, or drop us a line.</p>
+                        <svg width=32px height=17px viewBox="0 0 60 32">
+                            <path class="arrow" d="M0 4 L4 0 L30 24 L56 0 L60 4 L30 32 L0 4"></path>
+                        </svg>
                 </div>
             </div>
         </div>
