Unit testing page set up for QUnit

--- a/inployment-django/inployment/inployment_app/templates/base.html
+++ b/inployment-django/inployment/inployment_app/templates/base.html
@@ -46,5 +46,7 @@
 
     </div>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+    {% block tests %}
+    {% endblock %}
 </body>
 </html>
