Loading QUnit up

--- a/inployment-django/inployment/inployment_app/templates/qunit-home.html
+++ b/inployment-django/inployment/inployment_app/templates/qunit-home.html
@@ -1,4 +1,7 @@
 {% extends 'home.html' %}
+{% load staticfiles %}
+    <link rel="stylesheet" href="{% static 'inployment_app/css/qunit.css' %}">
+    <script src="{% static 'inployment_app/js/qunit.js' %}"></script>
 
 {% block tests %}
 
