js smoke test passing

--- a/inployment-django/inployment/inployment_app/templates/qunit-home.html
+++ b/inployment-django/inployment/inployment_app/templates/qunit-home.html
@@ -1,8 +1,19 @@
 {% extends 'home.html' %}
 {% load staticfiles %}
+
+
+{% block tests %}
+
     <link rel="stylesheet" href="{% static 'inployment_app/css/qunit.css' %}">
     <script src="{% static 'inployment_app/js/qunit.js' %}"></script>
 
-{% block tests %}
+    <div id="qunit"></div>
+    <div id="qunit-fixture"></div>
+
+    <script>
+        $(test("Smoke test", function(assert){
+            assert.ok(true);
+        }));
+    </script>
 
 {% endblock %}
