Correct 'visible' tag for first test

--- a/inployment-django/inployment/inployment_app/templates/qunit-home.html
+++ b/inployment-django/inployment/inployment_app/templates/qunit-home.html
@@ -11,8 +11,10 @@
     <div id="qunit-fixture"></div>
 
     <script>
-        $(test("Smoke test", function(assert){
-            assert.ok(true);
+        $(test("All underboxes are hidden", function(assert){
+            $(".underbox").each(function(){
+               assert.notOk($(this).is( ":visible" ));
+            });
         }));
     </script>
 
