better test description

--- a/inployment-django/inployment/inployment_app/templates/qunit-home.html
+++ b/inployment-django/inployment/inployment_app/templates/qunit-home.html
@@ -11,7 +11,7 @@
     <div id="qunit-fixture"></div>
 
     <script>
-        $(test("All underboxes are hidden and appear on chevron click",
+        $(test("All underboxes appear and hide on chevron click",
             function(assert){
 
                 // Check boxes are hidden
