Tests sitting within QUnit.test now

--- a/inployment-django/inployment/inployment_app/templates/base.html
+++ b/inployment-django/inployment/inployment_app/templates/base.html
@@ -25,6 +25,9 @@
 </head>
 <body>
 
+    {% block open-test-fixture %}
+    {% endblock %}
+
     <div id="main-container" class="container-fluid">
         <div id="title-container" class="container-fluid">
             <a href="/">
